doc/logfile.txt
Project documentation
<---- javadoc command: ---->
/usr/share/greenfoot/jdk/bin/javadoc
-sourcepath
/home/greenfoot/Dropbox/code/ENGR1110/Project/Group17GreenfootProject
-source
11
-classpath
/usr/share/greenfoot/extensions/greenfoot.jar:/usr/share/greenfoot/bluejcore.jar:/usr/share/greenfoot/bluejeditor.jar:/usr/share/greenfoot/bluejext.jar:/usr/share/greenfoot/junit-4.11.jar:/usr/share/greenfoot/hamcrest-core-1.3.jar:/usr/share/greenfoot/bluej.jar:/usr/share/greenfoot/classgraph-4.2.6.jar:/usr/share/greenfoot/diffutils-1.2.1.jar:/usr/share/greenfoot/commons-logging-api-1.1.2.jar:/usr/share/greenfoot/jl1.0.1.jar:/usr/share/greenfoot/opencsv-2.3.jar:/usr/share/greenfoot/xom-1.2.9.jar:/usr/share/greenfoot/lang-stride.jar:/usr/share/greenfoot/nsmenufx-2.1.4.jar:/usr/share/greenfoot/richtextfx-fat-0.9.0.jar:/usr/share/greenfoot/guava-17.0.jar:/usr/share/greenfoot/httpclient-4.1.1.jar:/usr/share/greenfoot/httpcore-4.1.jar:/usr/share/greenfoot/httpmime-4.1.1.jar:/usr/share/greenfoot/javafx/lib/javafx.base.jar:/usr/share/greenfoot/javafx/lib/javafx.controls.jar:/usr/share/greenfoot/javafx/lib/javafx.fxml.jar:/usr/share/greenfoot/javafx/lib/javafx.graphics.jar:/usr/share/greenfoot/javafx/lib/javafx.media.jar:/usr/share/greenfoot/javafx/lib/javafx.properties.jar:/usr/share/greenfoot/javafx/lib/javafx.swing.jar:/usr/share/greenfoot/javafx/lib/javafx.web.jar:/home/greenfoot/Dropbox/code/ENGR1110/Project/Group17GreenfootProject
-d
/home/greenfoot/Dropbox/code/ENGR1110/Project/Group17GreenfootProject/doc
-encoding
UTF-8
-charset
UTF-8
-doctitle
Group17GreenfootProject
-windowtitle
Group17GreenfootProject
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-link
https://docs.oracle.com/en/java/javase/11/docs/api/
/home/greenfoot/Dropbox/code/ENGR1110/Project/Group17GreenfootProject/Player.java
/home/greenfoot/Dropbox/code/ENGR1110/Project/Group17GreenfootProject/Cannon.java
/home/greenfoot/Dropbox/code/ENGR1110/Project/Group17GreenfootProject/Wall.java
/home/greenfoot/Dropbox/code/ENGR1110/Project/Group17GreenfootProject/Rock.java
/home/greenfoot/Dropbox/code/ENGR1110/Project/Group17GreenfootProject/TestPlayer.java
/home/greenfoot/Dropbox/code/ENGR1110/Project/Group17GreenfootProject/SmoothMover.java
/home/greenfoot/Dropbox/code/ENGR1110/Project/Group17GreenfootProject/ScoreBoard.java
/home/greenfoot/Dropbox/code/ENGR1110/Project/Group17GreenfootProject/TestObstacle.java
/home/greenfoot/Dropbox/code/ENGR1110/Project/Group17GreenfootProject/Counter.java
/home/greenfoot/Dropbox/code/ENGR1110/Project/Group17GreenfootProject/bullet.java
/home/greenfoot/Dropbox/code/ENGR1110/Project/Group17GreenfootProject/Bomb.java
/home/greenfoot/Dropbox/code/ENGR1110/Project/Group17GreenfootProject/key.java
/home/greenfoot/Dropbox/code/ENGR1110/Project/Group17GreenfootProject/MyWorld.java
<---- end of javadoc command ---->
Loading source file /home/greenfoot/Dropbox/code/ENGR1110/Project/Group17GreenfootProject/Player.java...
Loading source file /home/greenfoot/Dropbox/code/ENGR1110/Project/Group17GreenfootProject/Cannon.java...
Loading source file /home/greenfoot/Dropbox/code/ENGR1110/Project/Group17GreenfootProject/Wall.java...
Loading source file /home/greenfoot/Dropbox/code/ENGR1110/Project/Group17GreenfootProject/Rock.java...
Loading source file /home/greenfoot/Dropbox/code/ENGR1110/Project/Group17GreenfootProject/TestPlayer.java...
Loading source file /home/greenfoot/Dropbox/code/ENGR1110/Project/Group17GreenfootProject/SmoothMover.java...
Loading source file /home/greenfoot/Dropbox/code/ENGR1110/Project/Group17GreenfootProject/ScoreBoard.java...
Loading source file /home/greenfoot/Dropbox/code/ENGR1110/Project/Group17GreenfootProject/TestObstacle.java...
Loading source file /home/greenfoot/Dropbox/code/ENGR1110/Project/Group17GreenfootProject/Counter.java...
Loading source file /home/greenfoot/Dropbox/code/ENGR1110/Project/Group17GreenfootProject/bullet.java...
Loading source file /home/greenfoot/Dropbox/code/ENGR1110/Project/Group17GreenfootProject/Bomb.java...
Loading source file /home/greenfoot/Dropbox/code/ENGR1110/Project/Group17GreenfootProject/key.java...
Loading source file /home/greenfoot/Dropbox/code/ENGR1110/Project/Group17GreenfootProject/MyWorld.java...
Constructing Javadoc information...
/home/greenfoot/Dropbox/code/ENGR1110/Project/Group17GreenfootProject/bullet.java:9: error: class Bullet is public, should be declared in a file named Bullet.java
public class Bullet extends Actor
       ^
warning: unknown enum constant Tag.Any
  reason: class file for threadchecker.Tag not found
warning: unknown enum constant Tag.Any
warning: unknown enum constant Tag.Any
warning: unknown enum constant Tag.Any
1 error
4 warnings
